# AI-Hackathon

./: requirements.txt
.devcontainer/: devcontainer.json
latest_ai_development/: report.md
latest_ai_development/src/latest_ai_development/: Test.py  Testing_st.py  database.py  run_tasks.py  streamlite_app.py  styles.css
latest_ai_development/src/latest_ai_development/config/: agents.yaml  tasks.yaml
latest_ai_development/src/latest_ai_development/tools/: custom_tool.py  email.py  insighttask.py  nl2sqltask.py
salesdata/: README.md  pyproject.toml  requirement.txt  requirements.txt  streamlit_app.py  style.css  token.json
salesdata/assets/: style.css
salesdata/src/salesdata/: main.py
salesdata/src/salesdata/config/: agents.yaml  tasks.yaml
salesdata/tools/: Desktop.json  client_secret.json  crew.py  csvrag.py  custom_tool.py  demand.py  generatechart.py  googlecreds.json  insighttask.py  nl2sqltask.py  requirements.txt  sendemail.py
